2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Debugger.mdp: Updated projects.

2008-09-03  Lluis Sanchez Gual <lluis@novell.com> 

	* GdbSession.cs: Track api changes.

2008-08-22  Lluis Sanchez Gual <lluis@novell.com> 

	* Manifest.addin.xml, MonoDevelop.Debugger.mdp: Extension point
	  location has changed.

2008-08-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Debugger.mdp: Fix reference to Mono.TextEditor. The
	  incorrect add-in version number causes problems in the makefile
	  synchronization.

2008-08-07  Lluis Sanchez Gual <lluis@novell.com> 

	* GdbSession.cs: Implemented support for conditions, trace expressions
	  and hit counts.

2008-08-05  Lluis Sanchez Gual <lluis@novell.com> 

	* GdbSession.cs: Track api changes.

2008-07-25  Lluis Sanchez Gual <lluis@novell.com> 

	* GdbBacktrace.cs: Implement GetAllLocals.

2008-07-16  Lluis Sanchez Gual <lluis@novell.com> 

	* GdbSession.cs: Track api changes.

2008-07-11  Lluis Sanchez Gual <lluis@novell.com> 

	* GdbSessionFactory.cs: Fix construction process command line string.
	* GdbSession.cs: Track api changes.

2008-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Debugger.Gdb.make: Install the assemblies to the correct
	  directory.

2008-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* GdbSession.cs: Track api changes.

2008-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* GdbBacktrace.cs: Added support for code completion.

2008-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* GdbBacktrace.cs: Track api changes.
	* GdbSession.cs: Clean temporary variables.

2008-07-07  Lluis Sanchez Gual <lluis@novell.com> 

	* GdbBacktrace.cs: Track api changes.

2008-07-02  Lluis Sanchez Gual <lluis@novell.com> 

	* GdbBacktrace.cs: Support modifying variable values.
	* GdbSession.cs: Implemented support for disassembling files.

2008-07-01  Lluis Sanchez Gual <lluis@novell.com> 

	* GdbSession.cs: Track api changes.

2008-06-26  Lluis Sanchez Gual <lluis@novell.com> 